ingresstes/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  namespace: ingress-ns
spec:
  selector:
    app: ingress
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8000
